Add-Database is good

--- a/WebSmonder/WebSmonder/appsettings.json
+++ b/WebSmonder/WebSmonder/appsettings.json
@@ -1,9 +1,13 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+    "Logging": {
+        "LogLevel": {
+            "Default": "Information",
+            "Microsoft.AspNetCore": "Warning"
+        }
+    },
+    //mofilit389@anlocc.com mofilit389@anlocc.comQ
+    "AllowedHosts": "*",
+    "ConnectionStrings": {
+        "MyConnection": "Host=ep-super-darkness-a29ghqiz-pooler.eu-central-1.aws.neon.tech;Database=neondb;Username=neondb_owner;Password=npg_Dib6peUzmtn7"
     }
-  },
-  "AllowedHosts": "*"
 }
