Upload image server

--- a/WebSmonder/WebSmonder/appsettings.json
+++ b/WebSmonder/WebSmonder/appsettings.json
@@ -6,8 +6,19 @@
         }
     },
     //mofilit389@anlocc.com mofilit389@anlocc.comQ
+    //wobeyex946@dpcos.com
+
     "AllowedHosts": "*",
     "ConnectionStrings": {
         "MyConnection": "Host=ep-super-darkness-a29ghqiz-pooler.eu-central-1.aws.neon.tech;Database=neondb;Username=neondb_owner;Password=npg_Dib6peUzmtn7"
-    }
+    },
+    "ImagesDir": "images",
+    "ImageSizes": [
+        50,
+        100,
+        200,
+        400,
+        800,
+        1200
+    ]
 }
