--- a/WebSmonder/WebSmonder/WebSmonder.csproj
+++ b/WebSmonder/WebSmonder/WebSmonder.csproj
@@ -29,6 +29,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Folder Include="wwwroot\StandartImages\" />
     <Folder Include="wwwroot\pictures\" />
   </ItemGroup>
 
