--- a/WebSmonder/WebSmonder/WebSmonder.csproj
+++ b/WebSmonder/WebSmonder/WebSmonder.csproj
@@ -23,6 +23,9 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Content Update="Helpers\JsonData\Products.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
     <Content Update="Helpers\JsonData\Categories.json">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
