--- a/WebApiPizushi/WebApiPizushi/appsettings.json
+++ b/WebApiPizushi/WebApiPizushi/appsettings.json
@@ -1,9 +1,13 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+    "Logging": {
+        "LogLevel": {
+            "Default": "Information",
+            "Microsoft.AspNetCore": "Warning"
+        }
+    },
+    "AllowedHosts": "*",
+    "nixibo5546@deusa7.com": "nixibo5546@deusa7.comQ",
+    "ConnectionStrings": {
+        "DefaultConnection": "Host=ep-flat-bread-a2zds6v7-pooler.eu-central-1.aws.neon.tech;Database=neondb;Username=neondb_owner;Password=npg_EWNuv4fwG1Zg"
     }
-  },
-  "AllowedHosts": "*"
 }
