--- a/WebApiPizushi/WebApiPizushi/WebApiPizushi.csproj
+++ b/WebApiPizushi/WebApiPizushi/WebApiPizushi.csproj
@@ -22,4 +22,10 @@
 		<PackageReference Include="SixLabors.ImageSharp" Version="3.1.8" />
 	</ItemGroup>
 
+	<ItemGroup>
+	  <Content Update="Helpers\JsonData\Categories.json">
+	    <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+	  </Content>
+	</ItemGroup>
+
 </Project>
