--- a/WebApiPizushi/WebApiPizushi/appsettings.json
+++ b/WebApiPizushi/WebApiPizushi/appsettings.json
@@ -9,5 +9,14 @@
     "nixibo5546@deusa7.com": "nixibo5546@deusa7.comQ",
     "ConnectionStrings": {
         "DefaultConnection": "Host=ep-flat-bread-a2zds6v7-pooler.eu-central-1.aws.neon.tech;Database=neondb;Username=neondb_owner;Password=npg_EWNuv4fwG1Zg"
-    }
+    },
+    "ImagesDir": "images",
+    "ImageSizes": [
+        50,
+        100,
+        200,
+        400,
+        800,
+        1200
+    ]
 }
