--- a/WebApiPizushi/WebApiPizushi/WebApiPizushi.csproj
+++ b/WebApiPizushi/WebApiPizushi/WebApiPizushi.csproj
@@ -27,6 +27,9 @@
 	</ItemGroup>
 
 	<ItemGroup>
+	  <Content Update="Helpers\JsonData\Users.json">
+	    <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+	  </Content>
 	  <Content Update="Helpers\JsonData\Categories.json">
 	    <CopyToOutputDirectory>Always</CopyToOutputDirectory>
 	  </Content>
