Is good Wroking JWT Auth

--- a/WebApiPizushi/WebApiPizushi/appsettings.json
+++ b/WebApiPizushi/WebApiPizushi/appsettings.json
@@ -19,6 +19,7 @@
         800,
         1200
     ],
-
-    "JwtSecretKey": "xN2uVYzTc4HhJg4sEXR1PfVnNDrQZlTwPjWQZ+vSlA8="
+    "Jwt": {
+        "Key": "xN2uVYzTc4HhJg4sEXR1PfVnNDrQZlTwPjWQZ+vSlA8="
+    }
 }
