--- a/my-pizushi/package.json
+++ b/my-pizushi/package.json
@@ -11,12 +11,15 @@
     "bootstrap": "^5.3.6",
     "classnames": "^2.5.1",
     "formik": "^2.4.6",
+    "jwt-decode": "^4.0.0",
+    "lucide-react": "^0.511.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-router-dom": "^7.6.0",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4",
-    "yup": "^1.6.1"
+    "yup": "^1.6.1",
+    "zustand": "^5.0.5"
   },
   "scripts": {
     "start": "react-scripts start",
