--- a/WebApiPizushi/WebApiPizushi/WebApiPizushi.csproj
+++ b/WebApiPizushi/WebApiPizushi/WebApiPizushi.csproj
@@ -29,6 +29,10 @@
 	</ItemGroup>
 
 	<ItemGroup>
+	  <ProjectReference Include="..\Domain\Domain.csproj" />
+	</ItemGroup>
+
+	<ItemGroup>
 	  <Content Update="Helpers\JsonData\Users.json">
 	    <CopyToOutputDirectory>Always</CopyToOutputDirectory>
 	  </Content>
