--- a/WebApiPizushi/WebApiPizushi/WebApiPizushi.csproj
+++ b/WebApiPizushi/WebApiPizushi/WebApiPizushi.csproj
@@ -33,6 +33,9 @@
 	</ItemGroup>
 
 	<ItemGroup>
+	  <Content Update="Helpers\JsonData\ProductSizes.json">
+	    <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+	  </Content>
 	  <Content Update="Helpers\JsonData\Ingredients.json">
 	    <CopyToOutputDirectory>Always</CopyToOutputDirectory>
 	  </Content>
