--- a/my-react-ts/package.json
+++ b/my-react-ts/package.json
@@ -16,6 +16,7 @@
     "@tailwindcss/postcss": "^4.1.10",
     "apexcharts": "^4.7.0",
     "flatpickr": "^4.6.13",
+    "object-to-formdata": "^4.5.1",
     "postcss": "^8.5.6",
     "react": "^19.1.0",
     "react-apexcharts": "^1.7.0",
