--- a/my-react-ts/package.json
+++ b/my-react-ts/package.json
@@ -14,6 +14,7 @@
     "@react-jvectormap/world": "^1.1.2",
     "@reduxjs/toolkit": "^2.8.2",
     "@tailwindcss/postcss": "^4.1.10",
+    "antd": "^5.26.1",
     "apexcharts": "^4.7.0",
     "flatpickr": "^4.6.13",
     "object-to-formdata": "^4.5.1",
