Add Google Auth Google

--- a/WebApiPizushi/WebApiPizushi/appsettings.json
+++ b/WebApiPizushi/WebApiPizushi/appsettings.json
@@ -21,5 +21,6 @@
     ],
     "Jwt": {
         "Key": "xN2uVYzTc4HhJg4sEXR1PfVnNDrQZlTwPjWQZ+vSlA8="
-    }
+    },
+    "GoogleUserInfo": "https://www.googleapis.com/oauth2/v2/userinfo"
 }
