Working app is good

--- a/WebApiPizushi/WebApiPizushi/appsettings.json
+++ b/WebApiPizushi/WebApiPizushi/appsettings.json
@@ -22,5 +22,6 @@
     "Jwt": {
         "Key": "xN2uVYzTc4HhJg4sEXR1PfVnNDrQZlTwPjWQZ+vSlA8="
     },
-    "GoogleUserInfo": "https://www.googleapis.com/oauth2/v2/userinfo"
+    "GoogleUserInfo": "https://www.googleapis.com/oauth2/v2/userinfo",
+    "ClientUrl": "https://host.com"
 }
