--- a/my-react-ts/.env
+++ b/my-react-ts/.env
@@ -1,3 +1,3 @@
-VITE_API_BASE_URL=https://myhost.com
+VITE_API_BASE_URL=https://pizushi.itstep.click
 VITE_APP_IMAGE_URL=/images
 VITE_GOOGLE_AUTH=688315354046-isd3q5qkjaj88uaj9oudrldsf18bm592.apps.googleusercontent.com
