--- a/my-react-ts/.env.development
+++ b/my-react-ts/.env.development
@@ -1,2 +1,2 @@
-#VITE_API_BASE_URL=http://localhost:5186
-VITE_API_BASE_URL=https://pizushi.itstep.click
+VITE_API_BASE_URL=http://localhost:5186
+#VITE_API_BASE_URL=https://pizushi.itstep.click
